--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
         "start": "node dist/index.js",
         "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
         "build": "tsc",
-        "test": "jest",
+        "test": "jest --detectOpenHandles",
+        "test:watch": "jest --watch",
+        "test:e2e": "jest --config jest.config.js --detectOpenHandles",
         "prisma:init": "npx prisma init",
         "prisma:generate": "npx prisma generate",
         "start:prod": "npm run build && npm start"
@@ -30,15 +32,17 @@
         "@types/jest": "^29.5.12",
         "@types/multer": "^1.4.11",
         "@types/node": "^20.12.12",
+        "@types/supertest": "^6.0.2",
         "eslint": "^9.2.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.1.3",
         "jest": "^29.7.0",
         "prettier": "^3.2.5",
         "prisma": "^5.13.0",
+        "supertest": "^7.0.0",
         "ts-jest": "^29.1.2",
-        "ts-node": "^9.1.1",
+        "ts-node": "^10.9.2",
         "ts-node-dev": "^1.1.6",
-        "typescript": "^4.9.5"
+        "typescript": "^5.8.2"
     }
 }
